syntax = "proto3";
option csharp_namespace = "CecoChat.Contracts.Client";
package CecoChat;
import "message.proto";
import "google/protobuf/timestamp.proto";

service Send {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
}

message SendMessageRequest {
  Message message = 1;
}

message SendMessageResponse {
  google.protobuf.Timestamp message_timestamp = 1;
}
